feat: agregar métodos update y delete con validaciones